src/objects/Suggested_Resources__c.object
<CustomObject>
    <fields>
        <fullName>Assign_Resource__c</fullName>
        <formula>HYPERLINK(&quot;/apex/VFP_OWF_CreateAssignmentFromSugResources?resource=&quot;+ Resource__c  +&quot;&amp;reqId=&quot;+ Resource_Request__c ,  &quot;Assign Resource&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assign Resource</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Percentage__c</fullName>
        <label>Match Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Remaining_Match_percentage__c</fullName>
        <label>Remaining Match percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Resource_Request__c</fullName>
        <label>Resource Request</label>
        <referenceTo>pse__Resource_Request__c</referenceTo>
        <relationshipLabel>Suggested Resources</relationshipLabel>
        <relationshipName>Suggested_Resources</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Resource__c</fullName>
        <label>Resource</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Suggested Resources</relationshipLabel>
        <relationshipName>Suggested_Resources</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Skill_Name__c</fullName>
        <label>Skill Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_match_percentage__c</fullName>
        <formula>((Match_Percentage__c *90)/100)+((Remaining_Match_percentage__c *10)/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total match percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>View_In_Planners__c</fullName>
        <formula>HYPERLINK(&quot;/apex/pse__ResourcePlannerForResource?id=&quot;+Resource__c,&quot;View In Planners&quot;,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View In Planners</label>
        <type>Text</type>
    </fields>
    <label>Suggested Resources</label>
    <nameField>
        <label>Suggested Resources Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suggested Resources</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>